# pcfg

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: update_req.yml
docs/: README.rst  api_reference.rst  conf.py  index.rst
pcfg/: __init__.py  pcfg.py
tests/: test_pcfg.py
