[tool.poetry]
name = "pcfg"
version = "0.1.0"
description = "Generate sentences from a probabilistic context-free grammar."
authors = ["Thomas Breydo <tbreydo@gmail.com>"]
repository = "https://github.com/thomasbreydo/pcfg"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
