[tool.poetry]
name = "pcfg"
version = "0.1.3"
description = "Generate sentences from a probabilistic context-free grammar."
authors = ["Thomas Breydo <tbreydo@gmail.com>"]
repository = "https://github.com/thomasbreydo/pcfg"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.6"
nltk = "^3.5"
importlib-metadata = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
